kubernetes/professional-website/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: professional-website-ingress
  annotations:
    cert-manager.io/clusterissuer: "letsencrypt-professional-website"
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    component: ingress
spec:
  tls:
  - hosts:
    - matthewjohnson42.com
    secretName: website-tls
  rules:
  - host: matthewjohnson42.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: professional-website-svc
            port:
              number: 8088
